fixed overflow column

--- a/src/app/components/kanban-column/kanban-column.component.sass
+++ b/src/app/components/kanban-column/kanban-column.component.sass
@@ -20,4 +20,13 @@
         cursor: pointer
         margin-left: 10px
   .cards
-    height: 550px
+    height: 530px
+    overflow-y: auto
+    &::-webkit-scrollbar
+      width: 10px
+      height: 10px
+      margin-left: 10px
+    &::-webkit-scrollbar-track
+      background: transparent
+    &::-webkit-scrollbar-thumb
+      background: #282828
